--- a/web/src/app.css
+++ b/web/src/app.css
@@ -109,3 +109,19 @@
   background-color: var(--tech-bg);
   color: var(--tech-text);
 }
+
+@font-face {
+  font-family: 'Ubuntu';
+  src: url('/Ubuntu-Regular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Ubuntu';
+  src: url('/Ubuntu-Bold.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
